Add missing fields to GW-59 report, remove company filter from GWMonits page , Fix back button error from Gw-59 report page

--- a/SAM/Views/OperationalData/GWMonitDetails.cshtml
+++ b/SAM/Views/OperationalData/GWMonitDetails.cshtml
@@ -25,7 +25,7 @@
                 <i class="bi bi-file-earmark-pdf"></i> GW-59 PDF
             </a>
         }
-        <a asp-action="GWMonits" asp-route-companyId="@Model.CompanyId" asp-route-facilityId="@Model.FacilityId" asp-route-monitoringWellId="@Model.MonitoringWellId" class="btn btn-secondary">
+        <a asp-action="GWMonits" asp-route-facilityId="@Model.FacilityId" asp-route-monitoringWellId="@Model.MonitoringWellId" class="btn btn-secondary">
             <i class="bi bi-arrow-left"></i> Back to List
         </a>
     </div>
