--- a/SAM/Views/Shared/Partials/_Navigation.cshtml
+++ b/SAM/Views/Shared/Partials/_Navigation.cshtml
@@ -94,9 +94,9 @@
                         </a>
                     </li>
                     <li class="nav-item" role="none">
-                        <a class="nav-link" asp-controller="Reports" asp-action="NDAR1Reports" role="menuitem" data-tooltip="NDAR-1 Reports">
+                        <a class="nav-link" asp-controller="Reports" asp-action="NDAR1Reports" role="menuitem" data-tooltip="Non-Discharge Reports">
                             <i class="bi bi-file-earmark-text"></i>
-                            <span class="nav-link-text">NDAR-1 Reports</span>
+                            <span class="nav-link-text">Non-Discharge Reports</span>
                         </a>
                     </li>
                 </ul>
