--- a/SAM/Views/Reports/NDAR1ReportDetails.cshtml
+++ b/SAM/Views/Reports/NDAR1ReportDetails.cshtml
@@ -20,6 +20,9 @@
         <a asp-action="ExportNDMRReport" asp-route-id="@Model.Id" class="btn btn-success me-2">
             <i class="bi bi-download"></i> Export NDMR
         </a>
+        <a asp-action="ExportNDMLRReport" asp-route-id="@Model.Id" class="btn btn-success me-2">
+            <i class="bi bi-download"></i> Export NDMLR
+        </a>
         @if (canEdit)
         {
             <a asp-action="NDAR1ReportEdit" asp-route-id="@Model.Id" class="btn btn-primary">
