--- a/SAM/Views/OperationalData/WWCharDetails.cshtml
+++ b/SAM/Views/OperationalData/WWCharDetails.cshtml
@@ -19,7 +19,7 @@
                 <i class="bi bi-pencil"></i> Edit
             </a>
         }
-        <a asp-action="WWChars" asp-route-companyId="@Model.CompanyId" asp-route-facilityId="@Model.FacilityId" class="btn btn-secondary">
+        <a asp-action="WWChars" asp-route-facilityId="@Model.FacilityId" class="btn btn-secondary">
             <i class="bi bi-arrow-left"></i> Back to List
         </a>
     </div>
